feat(backend): fix classroom and assignments
